--- a/_sass/mobile.scss
+++ b/_sass/mobile.scss
@@ -69,6 +69,10 @@ h1.hero {
     margin: 0.3em 0 0.1em;
 }
 
+.hero img {
+  margin-left: 20px;
+}
+
 p {
     line-height: 1.5em;
     margin: 1em 0;
