--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 
     <section id="main">
         <article class="container">
-          <h1 class="hero">{{page.title}}<img src="{{page.img}}" alt="" /></h1>
+          <h1 class="hero">{{page.title}}</h1>
           {{ content }}
         </article>
     </section>
