--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
                     </div>
                 </a>
             </div>
-            <img src="/img/tybenz.png" alt="" class="avatar" />
+            <img src="{% include avatar_url %}?s=54" alt="avatar" class="avatar" />
         </div>
         <h5 class="logo"><a href="http://tybenz.com">Tyler Benziger</a></h5>
         <nav>
