--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
   <title>{{ page.title }} | Tyler Benziger</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
-  <link rel="shortcut icon" href="img/favicon.png">
+  <link rel="shortcut icon" href="{% include avatar_url %}?s=16">
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="css/mobile.css">
   <link rel="stylesheet" href="css/desktop.css" media="(min-width:40em)">
