--- a/_layouts/hubot.html
+++ b/_layouts/hubot.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>{{ page.title }} | Tyler Benziger</title>
+  <title>{{ page.title }} | Walkie | Tyler Benziger</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
   <link rel="shortcut icon" href="{% include avatar_url %}?s=16">
