--- a/_sass/pygments.scss
+++ b/_sass/pygments.scss
@@ -1,5 +1,5 @@
 .highlight { overflow-x: auto;background: #ffffff; color: black; padding: 20px;border: 1px solid #ccc;}
-.highlight pre  { white-space: pre;  font-size: 0.8em;line-height: 1.2em;  color: #d0d0d0; }
+.highlight pre  { white-space: pre;  font-size: 0.8em;line-height: 1.2em;  color: #333; }
 .highlight pre code {font-family: 'Source Code Pro', monospace;}
 .highlight .c { color: #999988; font-style: italic; }
 .highlight .err { background-color: #e3d2d2; color: #a61717; }
