Fixed download url

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -58,9 +58,9 @@
                     <li><a href="/hubot">Hubot</a></li>
                 {% endif %}
                 {% if page.subnav == "download" %}
-                    <li><a href="https://github.com/tybenz/exemplar/archive/master.zip" class="active">Download</a></li>
+                    <li><a href="https://rawgithub.com/tybenz/walkie/hubot/walkie.coffee" class="active">Download</a></li>
                 {% else %}
-                    <li><a href="https://github.com/tybenz/exemplar/archive/master.zip">Download</a></li>
+                    <li><a href="https://rawgithub.com/tybenz/walkie/hubot/walkie.coffee">Download</a></li>
                 {% endif %}
             </ul>
         </nav>
