--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -17,7 +17,7 @@
             var active = document.querySelector( 'header nav.main a.active' ).innerHTML.toLowerCase(),
                 links = document.querySelectorAll( 'header nav.main li a'),
                 selection = document.querySelector( 'header .nav-selection' ),
-                subactive = document.querySelector( 'header nav.subnav a.active' ).innerHTML.toLowerCase(),
+                subactive = document.querySelector( 'header nav.subnav a.active' ).dataset.subnav,
                 sublinks = document.querySelectorAll( 'header nav.subnav li a'),
                 subselection = document.querySelector( 'header .subnav-selection' ),
                 i, j, link;
@@ -35,7 +35,7 @@
                 link = sublinks[ i ];
                 link.addEventListener( 'mouseover', function() {
                     subselection.className = 'subnav-selection';
-                    subselection.className = 'subnav-selection ' + this.innerHTML.toLowerCase();
+                    subselection.className = 'subnav-selection ' + this.dataset.subnav;
                 });
                 link.addEventListener( 'mouseout', function() {
                     subselection.className = 'subnav-selection ' + subactive;
