--- a/_sass/mobile.scss
+++ b/_sass/mobile.scss
@@ -157,12 +157,12 @@ header .subnav-selection {
   width: 50px;
 }
 
-header .subnav-selection.home {
+header .subnav-selection.walkie-home {
   right: 150px;
   width: 42px;
 }
 
-header .subnav-selection.hubot {
+header .subnav-selection.walkie-hubot {
   right: 88px;
   width: 44px;
 }
