--- a/css/mobile.css
+++ b/css/mobile.css
@@ -132,11 +132,11 @@ header .subnav-selection {
   background-color: #111111;
   width: 50px; }
 
-header .subnav-selection.home {
+header .subnav-selection.walkie-home {
   right: 150px;
   width: 42px; }
 
-header .subnav-selection.hubot {
+header .subnav-selection.walkie-hubot {
   right: 88px;
   width: 44px; }
 
